update dev cnotainer to mount .ssh

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,5 +8,8 @@
         "extensions": [
             "rust-lang.rust-analyzer"
         ]
-    }
+    },
+    "mounts": [
+        "source=${env:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
+    ]
 }
